fix(todo): validate safe conditions at boundaries